Switched glossary loading javascript to load it's logic upon the setup() call rather than implicitly loaded during 'dojo.require()'
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@457 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/glossary.html
+++ b/gobotany/simplekey/templates/simplekey/glossary.html
@@ -28,7 +28,11 @@
 {% endblock %}
 
 {% block js_bottom %}
-<script>
+<script type="text/javascript">
 dojo.require('gobotany.sk.glossary');
+dojo.addOnLoad(function() {
+    glossary_helper = gobotany.sk.glossary.GlossaryHelper();
+    glossary_helper.setup();
+});
 </script>
 {% endblock %}
