Connect the That's My Plant button on the plant preview popup to the taxon page. (Held off last week while JS refactoring was underway.)
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@458 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/plant_preview.html
+++ b/gobotany/simplekey/templates/simplekey/plant_preview.html
@@ -8,5 +8,6 @@
       <dl>
       </dl>
       <div class="nav">
-          <button dojoType="dijit.form.Button">That's my plant</button>
+          <button dojoType="dijit.form.Button"
+                  id="taxon_button">That's my plant</button>
       </div>
