Fix the Show drop-down menu (for switching image types) on the results page. Evidently code changes were needed when it was changed from plain HTML to a Dijit widget.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@463 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -165,6 +165,14 @@ p {
     padding: 0;
 }
 
+form#results-display {
+    font-size: 0.7em;
+}
+
+form#results-display label {
+    margin-left: 1em;
+}
+
 #plants {
     height: 350px;
     overflow: auto;
