--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -574,7 +574,8 @@ input.filter_int2 {
 /* Highlighted glossary words in text. */
 
 .gloss {
-    text-decoration: underline;
+    border-bottom: 1px dashed;
+    cursor: pointer;
 }
 .glosstip {
     font-size: 0.72em;
