Parameterized the best-character scorer, and made the best-character page fast.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@484 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -111,6 +111,16 @@
       an integer that botanists enter into our database</li>
   </ul>
 
+  <hr>
+  <form action=".">
+    Coverage weight:
+    <input name="coverage_weight" size="5" value="{{ coverage_weight }}">
+    <br>
+    Ease-of-observability weight:
+    <input name="ease_weight" size="5" value="{{ ease_weight }}">
+    <input type="submit" value="Recompute">
+  </form>
+
   {% for character in characters %}
   <hr>
   <p>
