Put the Getting Started content in place in the Help area. Move the glossary pages into the Help area.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@489 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help.html
+++ b/gobotany/simplekey/templates/simplekey/help.html
@@ -19,7 +19,7 @@
                     <li><a {% ifequal request.path "/simple/help/collections/" %}class="current"{% else %}href="/simple/help/collections/"{% endifequal %}>Understanding Plant Collections</a></li>
                 </ul>
             </li>
-            <li><a {% ifequal request.path "/simple/help/glossary/" %}class="current"{% else %}href="/simple/help/glossary/"{% endifequal %}>Glossary</a></li>
+            <li><a {% ifequal request.path "/simple/help/glossary/a/" %}class="current"{% else %}href="/simple/help/glossary/a/"{% endifequal %}>Glossary</a></li>
             <li><a {% ifequal request.path "/simple/help/video/" %}class="current"{% else %}href="/simple/help/video/"{% endifequal %}>Video Help Topics</a></li>
         </ul>
     </div>
