--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -10,17 +10,17 @@ About Go-Botany
 <div>
     {{ section_1_content_blurb|safe }}
 </div>
-<img src="" alt="section 1 image TBD">
+<img class="about" src="" alt="section 1 image TBD">
 <hr>
 <h2>{{ section_2_heading_blurb }}</h2>
 <div>
     {{ section_2_content_blurb|safe }}
 </div>
-<img src="" alt="section 2 image TBD">
+<img class="about" src="" alt="section 2 image TBD">
 <hr>
 <h2>{{ section_3_heading_blurb }}</h2>
 <div>
     {{ section_3_content_blurb|safe }}
 </div>
-<img src="" alt="section 3 image TBD">
+<img class="about" src="" alt="section 3 image TBD">
 {% endblock %}
