--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -6,6 +6,6 @@ Getting Started
 Getting Started
 {% endblock %}
 {% block maincontent %}
-<div>getting started content goes here</div>
-<div>video thumbnail goes here</div>
+<div id="start">{{ blurb|safe }}</div>
+<div id="start-video">video thumbnail goes here</div>
 {% endblock %}
