--- a/gobotany/simplekey/templates/simplekey/help_collections.html
+++ b/gobotany/simplekey/templates/simplekey/help_collections.html
@@ -6,5 +6,47 @@ Understanding Plant Collections
 Understanding Plant Collections
 {% endblock %}
 {% block maincontent %}
-<div>simple key full clickable map with videos goes here</div>
+<div id="subway">
+  <p>The map below shows how we have grouped over 3,000 native New England plants
+     into six major categories, which we call Plant Collections. These are not
+     scientific categories, but rather groupings that a typical person might see
+     as related. Click on one of the categories below to learn about that category.</p>
+
+  <ul>
+    {% for page in pages %}
+      {% for pilegroup in page.pilegroups.all %}
+        <li>
+          <a class="video" href="{% url simplekey-help-video-pilegroup pilegroup.slug %}"
+             >{{ pilegroup.name }}</a>
+          <br><a href="#" class="more">more...</a>
+          <ul>
+            {% for pile in pilegroup.piles.all %}
+              <li>
+                <a class="video" href="{% url simplekey-help-video-pile pilegroup.slug pile.slug %}"
+                   >{{ pile.name }}</a>
+              </li>
+            {% endfor %}
+          </ul>
+        </li>
+      {% endfor %}
+    {% endfor %}
+  </ul>
+
+</div>
+
+<div id="video" dojoType="dijit.Dialog" title="Video"
+     aria-describedby="video">
+  <p></p>
+</div>
+{% endblock %}
+
+{% block js_bottom %}
+  <script>
+      dojo.require('dijit.Dialog');
+      dojo.require('gobotany.sk.subway');
+      dojo.addOnLoad(function() {
+          var is_help_collections = true;
+          gobotany.sk.subway.init(is_help_collections);
+      });
+  </script>
 {% endblock %}
