Embed the YouTube video in the Help page popups and in a 'backup' page whose URL is used to build the popup. Set the YouTube video id for all pile groups and piles.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@494 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_collections.html
+++ b/gobotany/simplekey/templates/simplekey/help_collections.html
@@ -37,6 +37,7 @@ Understanding Plant Collections
 <div id="video" dojoType="dijit.Dialog" title="Video"
      aria-describedby="video">
   <p></p>
+  <div id="clip"></div>
 </div>
 {% endblock %}
 
