Add Help link to results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@496 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -24,8 +24,8 @@
           <button dojoType="dijit.form.Button" id="clear_genus">Clear</button>
         </p>
       </form>
-      <div class="clear">&nbsp;</div>
     </div>
+    <p id="help-nav"><a href="/simple/help">Help</a></p>
     {% include "simplekey/filter_working.html" %}
     <form id="results-display">
       <label for="image-type-selector">Show:</label>
