Added a weight with which Elizabeth can penalize lengths, despite their very good entropy ratings.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@501 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -130,6 +130,8 @@
     <input name="coverage_weight" size="5" value="{{ coverage_weight }}">
     Ease-of-observability weight:
     <input name="ease_weight" size="5" value="{{ ease_weight }}">
+    Length weight:
+    <input name="length_weight" size="5" value="{{ length_weight }}">
     <input type="submit" value="Try out these values">
   </form>
 
