Add a way to set the Getting Started YouTube video in the Admin. Embed the Getting Started video on the Getting Started Help page. Tweak navigation and labeling for the glossary.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@502 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -3,7 +3,7 @@
 Glossary
 {% endblock %}
 {% block pageheading %}
-Glossary
+Glossary: {{ this_letter|upper }}
 {% endblock %}
 {% block maincontent %}
 <div>
