Tweak layout of the About page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@503 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -6,21 +6,27 @@ About Go-Botany
 About Go-Botany
 {% endblock %}
 {% block maincontent %}
-<h2>{{ section_1_heading_blurb }}</h2>
 <div>
-    {{ section_1_content_blurb|safe }}
+    <h2>{{ section_1_heading_blurb }}</h2>
+    <div>
+        {{ section_1_content_blurb|safe }}
+    </div>
 </div>
 <img class="about" src="" alt="section 1 image TBD">
 <hr>
-<h2>{{ section_2_heading_blurb }}</h2>
 <div>
-    {{ section_2_content_blurb|safe }}
+    <h2>{{ section_2_heading_blurb }}</h2>
+    <div>
+        {{ section_2_content_blurb|safe }}
+    </div>
 </div>
 <img class="about" src="" alt="section 2 image TBD">
 <hr>
-<h2>{{ section_3_heading_blurb }}</h2>
 <div>
-    {{ section_3_content_blurb|safe }}
+    <h2>{{ section_3_heading_blurb }}</h2>
+    <div>
+        {{ section_3_content_blurb|safe }}
+    </div>
 </div>
 <img class="about" src="" alt="section 3 image TBD">
 {% endblock %}
