Tweak text size for the About page and other Help pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@504 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -66,11 +66,11 @@ p {
     margin-top: 0.7em;
 }
 
-#help #main div div {
-    font-size: 0.8em;
+#help #main div {
+    font-size: 13px;
 }
 
-#help #main > div {
+#help #main div.about {
     float: left;
     width: 450px;
 }
