Add YouTube videos and titles to Video Help Topics page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@505 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -118,6 +118,14 @@ p {
     text-align: left;
 }
 
+#help #video-topics {
+    padding: 0 0 1em 0;
+}
+
+#help .clip {
+    margin-bottom: 2em;
+}
+
 #more_filters {
     border-bottom: 1px solid #ccc;
     font-size: 0.65em;
