--- a/gobotany/simplekey/templates/simplekey/help_video.html
+++ b/gobotany/simplekey/templates/simplekey/help_video.html
@@ -6,5 +6,29 @@ Video Help Topics
 Video Help Topics
 {% endblock %}
 {% block maincontent %}
-<div>video help topics go here</div>
+<div id="video-topics">
+
+    {% for video in videos %}
+        <h2>{{ video.title }}</h2>
+        <div class="clip">
+            <a href="http://www.youtube.com/v/{{ video.youtube_id }}?enablejsapi=1&version=3">YouTube Video: {{ video.title }}</a>
+        </div>
+    {% endfor %}
+
+</div>
+
+{% endblock %}
+
+{% block js_bottom %}
+    <script>
+        dojo.require('dojox.embed.Flash');
+        dojo.addOnLoad(function() {
+            dojo.query('.clip').forEach(function (node, index, attr) {
+                var path = dojo.attr(dojo.query('> a', node)[0], 'href');
+                var player = new dojox.embed.Flash({path: path,
+                                                    width: 250,
+                                                    height: 250}, node);
+            });
+        });
+    </script>
 {% endblock %}
