Changed the default best-character weights to new values supplied by Elizabeth after she did some extensive experimentation with them.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@512 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/pile_characters.html
+++ b/gobotany/core/templates/pile_characters.html
@@ -122,6 +122,11 @@
     <b>{{ ease_parameter.value }}</b>&nbsp;&nbsp;&nbsp;
     <a href="http://localhost:8000/admin/core/parameter/{{ ease_parameter.id }}/"
        >Change in admin site</a>
+  <br>
+    Length weight in the database:
+    <b>{{ length_parameter.value }}</b>&nbsp;&nbsp;&nbsp;
+    <a href="http://localhost:8000/admin/core/parameter/{{ length_parameter.id }}/"
+       >Change in admin site</a>
   </p>
 
   <hr>
