Updated search page to look like mockup
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@519 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/header.html
+++ b/gobotany/simplekey/templates/simplekey/header.html
@@ -1,6 +1,6 @@
 <div id="head">
   (header/navigation)
   <form id="headsearch" action="/simple/search/">
-    <input type="text" name="q"/><button >Search</button>
+    <input type="text" name="q" value="{{ request.GET.q }}"/><button>Search</button>
   </form>
 </div>
