--- a/gobotany/simplekey/templates/simplekey/search_navigation.html
+++ b/gobotany/simplekey/templates/simplekey/search_navigation.html
@@ -1,23 +1,19 @@
-{% if page.has_previous or page.has_next %}
-  <div class="search_navigation">
-    {% if page.has_previous %}
-      {% if page.previous_page_number == 1 %}
-        <a href="?q={{ query }}">
-      {% else %}
-        <a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">
-      {% endif %}
-    {% endif %}
-      &laquo; Previous
-    {% if page.has_previous %}
-      </a>
-    {% endif %}
-    |
-    {% if page.has_next %}
-      <a href="?q={{ query }}&amp;page={{ page.next_page_number }}">
-    {% endif %}
-    Next &raquo;
-    {% if page.has_next %}
-      </a>
-    {% endif %}
-  </div>
+<div class="search-navigation">
+<h3>Pages</h3>
+
+{% if page.number != 1 and paginator.num_pages > 1 %}
+  <a class="first" href="?q={{ query }}&amp;page=1">First</a> -
 {% endif %}
+
+{% for page_num in paginator.page_range %}
+  {% if page_num == page.number %}
+    <span class="non-link">{{ page_num }}</span>
+  {% else %}
+    <a href="?q={{ query }}&amp;page={{ page_num }}">{{ page_num }}</a>
+  {% endif %}
+{% endfor %}
+
+{% if page.number < paginator.num_pages and paginator.num_pages > 1 %}
+  - <a class="last" href="?q={{ query }}&amp;page={{ paginator.num_pages }}">Last</a>
+{% endif %}
+</div>
