--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -466,35 +466,82 @@ ul#glossary li:nth-child(even) {
 
 /* Search page formatting */
 
-.search_navigation {
+.search-navigation {
     padding: 8px;
-    background-color: #eec;
-    color: #850;
+    text-align: right;
+    font-size: 0.88em;
 }
 
-#search_results_list h4 {
+.search-navigation a {
+    color: black;
+}
+
+.search-navigation h3 {
+    display: inline;
+}
+ 
+#search-results h2 {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+#search-results-list li {
+    margin-left: 40px;
+    margin-bottom: 1em;
+}
+
+#search-results-list li .icon {
+    width: 16px;
+    height: 16px;
+    border: 1px #ccc solid;
+    float: left;
+    margin-right: 0.4em;
+}
+
+
+#search-results-list h4 {
     font-family: Helvetica;
     font-size: 0.92em;
     font-style: italic;
     font-weight: bold;
+    margin: 0;
 }
 
-#search_results_list p {
+#search-results-list h4 a {
+    color: black;
+}
+
+#search-results-list p {
     font-size: 0.88em;
     margin-left: 2em;
 }
 
-#search_results_list em {
+#search-results-list em {
     font-style: normal;
     font-weight: bold;
 }
 
-#search_results_list .excerpt {
-    color: #070;
+#search-results-list .excerpt {
 }
 
 #results-display {
     clear: left;
+}
+
+#search-results .search-type {
+    font-size: 0.8em;
+}
+
+#search-results .search-type {
+    padding: 1em 0 2em 0;
+}
+
+#search-results .search-type .option {
+    margin-left: 2em;
+}
+
+.disabled {
+    color: #ccc;
 }
 
 /* Dijit Claro overrides */
