Created the beginnings of a guided search page, that loads all character names.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@521 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -10,6 +10,9 @@
     <p>
       <a href="1/">Start identifying!</a>
     </p>
+    <p>
+      <a href="guided-search/">Guided Search</a>
+    </p>
     <form>
       <input id="skip_getting_started" type="checkbox"
              {% if skip_getting_started %} checked {% endif %}>
