Characters are now grouped by character group; groups display in a <select>.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@522 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/guided_search.html
+++ b/gobotany/simplekey/templates/simplekey/guided_search.html
@@ -10,8 +10,8 @@
   that match.
 </p>
 
-<ul id="character_list">
-</ul>
+<form id="character_list">
+</form>
 
 {% endblock %}
 {% block js_bottom %}
