The guided search page now shows character when a character group is selected.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@525 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/guided_search.html
+++ b/gobotany/simplekey/templates/simplekey/guided_search.html
@@ -10,7 +10,7 @@
   that match.
 </p>
 
-<form id="character_list">
+<form id="filter_list">
 </form>
 
 {% endblock %}
@@ -19,7 +19,7 @@
 <script>
   dojo.require('gobotany.sk.guided_search');
   dojo.addOnLoad(function() {
-    manager = gobotany.sk.guided_search.GuidedSearchManager();
+    manager = gobotany.sk.guided_search.Manager();
   });
 </script>
 
