A species count is generated when you select a guided-search character value.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@531 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/guided_search.html
+++ b/gobotany/simplekey/templates/simplekey/guided_search.html
@@ -13,6 +13,12 @@
 <form id="filter_list">
 </form>
 
+<div id="guided_search_total">
+</div>
+
+<ul id="guided_search_results">
+</ul>
+
 {% endblock %}
 {% block js_bottom %}
 
