Add the ability to browse images to the species page. Extract common code shared between the species page and the plant preview popups on the results page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@540 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -124,3 +124,12 @@
       </div>
   </div>
 {% endblock %}
+
+{% block js_bottom %}
+  <script>
+      dojo.require('gobotany.sk.species');
+      dojo.addOnLoad(function() {
+          gobotany.sk.species.init('{{ scientific_name }}');
+      });
+  </script>
+{% endblock %}
