Add description field to taxon model (data yet to be imported). Add description heading and paragraph to the species page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@541 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -32,6 +32,9 @@
              <a href="#">next &gt;</a></p>
       </div>
       <div id="info">
+          <h3>Description</h3>
+          <p>{{ taxon.description }}</p>
+
           <h3>Characteristics</h3>
           {% if characteristics %}
               {% for characteristic in characteristics %}
