Each of our Dojo classes needs its own file for requires() to work, I have determined after reading much documentation; so I am writing my new guided-search JavaScript that way, and have broken out a helper class that I needed from "results.js" since otherwise I was getting a "null" when I tried referencing it.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@543 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/guided_search.html
+++ b/gobotany/simplekey/templates/simplekey/guided_search.html
@@ -23,7 +23,7 @@
 {% block js_bottom %}
 
 <script>
-  dojo.require('gobotany.sk.guided_search');
+  dojo.require('gobotany.sk.guided_search.Manager');
   dojo.addOnLoad(function() {
     manager = gobotany.sk.guided_search.Manager();
   });
