--- a/gobotany/simplekey/templates/simplekey/guided_search.html
+++ b/gobotany/simplekey/templates/simplekey/guided_search.html
@@ -16,8 +16,16 @@
 <div id="guided_search_total">
 </div>
 
-<ul id="guided_search_results">
-</ul>
+<div id="plant-preview" dojoType="dijit.Dialog" title="Plant Preview"
+     aria-describedby="preview-intro">
+  {% include "simplekey/plant_preview.html" %}
+</div>
+
+<div id="filter-working" style="display: none">
+  This div is needed so results/SpeciesSectionHelper.js keeps working.
+</div>
+
+{% include "simplekey/plants.html" %}
 
 {% endblock %}
 {% block js_bottom %}
