Made it possible to add more filters to the guided filters page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@546 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/guided_search.html
+++ b/gobotany/simplekey/templates/simplekey/guided_search.html
@@ -10,7 +10,13 @@
   that match.
 </p>
 
-<form id="filter_list">
+<form id="guided_search_filter_list">
+</form>
+
+<form>
+  <button id="add_guided_search_filter"
+          style="visibility: hidden"
+          >Add another filter</button>
 </form>
 
 <div id="guided_search_total">
