Correct an HTML attribute (alt not available on <object>).
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@548 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -94,12 +94,12 @@
           <!--[if IE]>
           <object src="/static/graphics/new-england-counties.svg"
                   classid="image/svg+xml" id="dist-county-map"
-                  alt="distribution map for {{ scientific_name }}">
+                  title="distribution map for {{ scientific_name }}">
           <![endif]-->
           <!--[if !IE]>-->
           <object data="/static/graphics/new-england-counties.svg"
                   type="image/svg+xml" id="dist-county-map"
-                  alt="distribution map for {{ scientific_name }}">
+                  title="distribution map for {{ scientific_name }}">
           <!--<![endif]-->
           </object>
 
