Add plain language for some conservation and wetland status codes.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@550 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -72,11 +72,7 @@
           
           <h3>Wetland Status</h3>
           <p>
-              {% if taxon.wetland_status|length > 0 %}
-                  {{ taxon.wetland_status }}
-              {% else %}
-                  N/A
-              {% endif %}
+              {{ wetland_status }}
           </p>
 
           <h3>North American Native Plant</h3>
