Add 'Sometimes Confused With' (look-alikes) to the species page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@557 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -57,6 +57,16 @@
               {% endif %}
           </ul>
 
+          {% if lookalikes|length > 0 %}
+          <h3>Sometimes Confused With</h3>
+          <dl>
+              {% for lookalike in lookalikes %}
+              <dt>{{ lookalike.lookalike_characteristic }}:</dt>
+              <dd><em>{{ lookalike.lookalike_scientific_name }}</em></dd>
+              {% endfor %}
+          </dl>
+          {% endif %}
+
           <h3>Distribution &amp; Endangered/Invasive Status</h3>
 
           <div>
