Search: tweak presentation of the number of results.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@558 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div id="search-results">
     {% if query %}
-    <h2>{{ paginator.count }} item(s) found</h2>
+    <h2>{{ paginator.count }} result{% if paginator.count != 1 %}s{% endif %}</h2>
 
     <div class="search-type">
       <span class="title">Search:</span>
@@ -24,6 +24,9 @@
           <p class="excerpt">
             {{ result.description }}
           </p>
+          <p>
+              {{ result.text }}
+          <p>
         </li>
       {% empty %}
         <li class="no-results">No results found.</li>
